--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@solidjs/start": "^1.0.10",
     "@unocss/preset-web-fonts": "^0.65.1",
     "@unocss/reset": "^0.65.1",
+    "marked": "^15.0.5",
     "solid-js": "^1.9.3",
     "solid-motionone": "^1.0.2",
     "unocss": "^0.65.1",
